--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "puppeteer": "^19.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
