--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "chalk": "^4.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "puppeteer": "^19.4.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.18",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20"
