--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx concurrently \"npx vite --config vite.config.dev.ts\" \"ts-node src/index.ts\"",
+    "dev": "npx concurrently \"npx vite --config vite.config.dev.ts\" \"npx tsc -w\" \"npx nodemon dist/index.js\"",
     "build": "npx vite build --config vite.config.prod.ts && tsc"
   },
   "repository": {
@@ -39,13 +39,15 @@
     "monaco-editor": "^0.45.0",
     "simple-icons": "^11.3.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
     "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
     "@types/node": "^18.11.18",
     "@types/ws": "^8.5.10",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.1.0",
+    "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-plugin-monaco-editor": "^1.1.0"
   }
