--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "emitDecoratorMetadata": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "./dist/**/*", "../dist"],
+  "exclude": ["node_modules", "./dist/**/*", "../dist"]
 }
